# ChangeLog for dev-tex/latex-beamer
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-tex/cvs-repo/gentoo-x86/dev-tex/latex-beamer/ChangeLog,v 1.72 2011/10/04 17:45:36 jer Exp $

  04 Oct 2011; Jeroen Roovers <jer@gentoo.org> latex-beamer-3.10-r1.ebuild:
  Stable for HPPA (bug #355085).

*latex-beamer-3.11 (18 Sep 2011)

  18 Sep 2011; Tim Harder <radhermit@gentoo.org> +latex-beamer-3.11.ebuild:
  Version bump (bug #382855). Update to EAPI 4.

  25 Jul 2011; Kacper Kowalik <xarthisius@gentoo.org>
  latex-beamer-3.10-r1.ebuild:
  ppc/ppc64 stable wrt #373417

  23 Jul 2011; Raúl Porcel <armin76@gentoo.org> latex-beamer-3.10-r1.ebuild:
  alpha/ia64/s390/sh/sparc stable wrt #373417

  15 Jul 2011; Markus Meier <maekke@gentoo.org> latex-beamer-3.10-r1.ebuild:
  x86 stable, bug #373417

  10 Jul 2011; Markus Meier <maekke@gentoo.org> latex-beamer-3.10-r1.ebuild:
  arm stable, bug #373417

  01 Jul 2011; Markos Chandras <hwoarang@gentoo.org>
  latex-beamer-3.10-r1.ebuild:
  Stable on amd64 wrt bug #373417

  14 Jun 2011; Matt Turner <mattst88@gentoo.org> latex-beamer-3.10-r1.ebuild:
  Added ~mips, bug 342513

  09 Dec 2010; Alexis Ballier <aballier@gentoo.org> latex-beamer-3.07.ebuild:
  3.07 is incompatible with texlive-latex-2010, mark it as such to force an
  upgrade, bug #347449 by pi <pi314@gmx.de>

  09 Dec 2010; Alexis Ballier <aballier@gentoo.org> -latex-beamer-3.10.ebuild:
  remove old

  09 Dec 2010; Alexis Ballier <aballier@gentoo.org>
  latex-beamer-3.10-r1.ebuild:
  We still need to inherit latex-package for the texmf-update call

*latex-beamer-3.10-r1 (09 Dec 2010)

  09 Dec 2010; Alexis Ballier <aballier@gentoo.org>
  +latex-beamer-3.10-r1.ebuild,
  +files/latex-beamer-3.10-polish-translator.patch:
  Fix a bug in polish translations, bug #346577 by Hubert Kowalski
  <johnnybit@poczta.onet.pl>

  11 Oct 2010; Andreas K. Huettel <dilfridge@gentoo.org>
  latex-beamer-3.10.ebuild: