@@ -2,18 +2,16 @@
 Hash: SHA1
 
 AUX latex-beamer-3.10-polish-translator.patch 1308 RMD160 ec61a5fe60c699871dc2c7da807dbf7bf87da667 SHA1 34246cfe2c2fe3539c9e663a03021d2b84a2a422 SHA256 2ebabb5defe17058d87a77b1482102d7b62fc84dc75d2f22ff1ab176cb1a0eac
-DIST latex-beamer-3.07.tar.gz 2391893 RMD160 cbaf5c62b214810436abca2486a5731291e2b808 SHA1 786251752ae95e78ec0f5d7b4bacc4e73767adb0 SHA256 7b71bd57c7820dc2fa94825ac430fcc832856954e895f79f849641e0ca838d1e
 DIST latex-beamer-3.10.tar.bz2 2577733 RMD160 acc6d3840bed263e35be0164bf300016270b8340 SHA1 e46534b3a51ee5fbd48f4e1ef4cce23ff34ee83e SHA256 79c7acf7d97fe7174aec676fbc504857e626685de6bafa6b25361367bd9c3db9
 DIST latex-beamer-3.11.zip 2881467 RMD160 3c2efde491ba0372a2aad5a6fb3161265c363dca SHA1 f9dd79654d7f07c7c062ab8a225a28ae6c16034c SHA256 9b36a8b4c1493344d66ef1058aa25f8b99ab616d9353d541d1f4100f16fdf260
-EBUILD latex-beamer-3.07.ebuild 1735 RMD160 36ec2da014cf72c50f753e6a10cff3d548fca509 SHA1 c90e28f23b265c6fdd41b488e1c8ef4e5c1f35b4 SHA256 671d9c88df67018aaaa5412f8fc6e3f45ed3a67c26a1c3b2c289a10f0c0425c8
 EBUILD latex-beamer-3.10-r1.ebuild 1788 RMD160 c0e4eb7270177823136befee0fe9f886aa131931 SHA1 165cb56cf278edcda735ba549bf9837c5f58421a SHA256 498df0fc2827370f9697cc28320111f7827cb96b031335defd22f49ff643239d
 EBUILD latex-beamer-3.11.ebuild 1447 RMD160 a652d07e614e269b12947c8b9dec7f743dab4ab9 SHA1 ae1f084cc389a855a3dcebb57650c3077dd84564 SHA256 41fb4c03b00c15c17fccb09b8a2bad273a1a3ba547be780f6494194a0d18cfc0
-MISC ChangeLog 10137 RMD160 2ed16e3ba24c8bc9ede82f6a6415832a6e4783bb SHA1 7c6ebeeb351d67ace2e53f930de7aa7d07314650 SHA256 ea667e83a4f297137118a968fdfccfd003928633d20356e875a91c132b7bad52
+MISC ChangeLog 10235 RMD160 33bf6076af1837d7c0d12088b961f0bb15eec27b SHA1 4ab3620c85744c2a1460b3b30cb2859081de9d52 SHA256 ea0a304078ad124efbdee1c91862bd2326718251dbf848e84327083d68607c9d
 MISC metadata.xml 242 RMD160 5e8fc2d5d974c6852df9bdf6eebf02dd99bccd08 SHA1 521eb94619f54a50c3a43beecee5d9fa60c9865d SHA256 fad92f2092b2b8064176e6c143151a4a14d12715fc7f9eb551d1decbdb35e21c
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.18 (GNU/Linux)
 
-iEYEARECAAYFAk6LRkYACgkQVWmRsqeSphMVWgCdHug7pE08dGg3kXj6Ovgw5HHf
-mfcAn3HoghQppSimLcqAQVD2Wl/prWa8
-=04kQ
+iEYEARECAAYFAk6MuZMACgkQvFcC4BYPU0plogCeMMIUnhbZd11jOrRvHqAJj2oQ
+RxsAn2ccEuMiybi6vuYggNxnP2YwGdbd
+=Ej7V
 -----END PGP SIGNATURE-----
