@@ -1,6 +1,9 @@
 # ChangeLog for dev-tex/latex-beamer
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-tex/cvs-repo/gentoo-x86/dev-tex/latex-beamer/ChangeLog,v 1.72 2011/10/04 17:45:36 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-tex/cvs-repo/gentoo-x86/dev-tex/latex-beamer/ChangeLog,v 1.73 2011/10/05 20:09:49 aballier Exp $
+
+  05 Oct 2011; Alexis Ballier <aballier@gentoo.org> -latex-beamer-3.07.ebuild:
+  remove old
 
   04 Oct 2011; Jeroen Roovers <jer@gentoo.org> latex-beamer-3.10-r1.ebuild:
   Stable for HPPA (bug #355085).
